Validando nível do curso na gravação do curso